plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '1.0.21'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

repositories {
    // Keep local artifacts first for offline development, then strictly route third-party groups.
    mavenLocal()
    exclusiveContent {
        forRepository {
            mavenCentral()
        }
        filter {
            includeGroup 'org.bytedeco'
        }
    }
    exclusiveContent {
        forRepository {
            maven { url = 'https://mcef-download.cinemamod.com/repositories/releases' }
        }
        filter {
            includeGroup 'com.cinemamod'
        }
    }
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    // JavaCPP API and Windows natives must share one runtime class-path root. NeoForge Jar-in-Jar
    // metadata has no classifier field, so embedding the base and windows-x86_64 artifacts as two
    // jars gives them the same identifier and can cause one half to be discarded at launch.
    ffmpegEmbed {
        canBeConsumed = false
        canBeResolved = true
        transitive = false
    }
}

dependencies {
    // Keep the requested JavaCPP platform coordinate/version, but do not pull every OS/CPU native
    // bundle into a single development install. The API jar is platform-neutral and this MVP ships
    // the Windows x64 natives used by the first validation target. Additional classifiers can be
    // added without changing the decoder abstraction.
    implementation('org.bytedeco:ffmpeg-platform:7.1-1.5.11') { transitive = false }
    implementation 'org.bytedeco:ffmpeg:7.1-1.5.11'
    runtimeOnly 'org.bytedeco:ffmpeg:7.1-1.5.11:windows-x86_64'
    runtimeOnly 'org.bytedeco:javacpp:1.5.11:windows-x86_64'
    // Merge API and classifier resources into the mod jar so JavaCPP sees one coherent classpath
    // root and NeoForge never has to resolve duplicate classifier-less Jar-in-Jar identifiers.
    ffmpegEmbed 'org.bytedeco:ffmpeg:7.1-1.5.11'
    ffmpegEmbed 'org.bytedeco:javacpp:1.5.11'
    ffmpegEmbed 'org.bytedeco:ffmpeg:7.1-1.5.11:windows-x86_64'
    ffmpegEmbed 'org.bytedeco:javacpp:1.5.11:windows-x86_64'

    // MCEF is a required client mod, not shaded into MineScreen. The common artifact exposes its API;
    // the NeoForge artifact is present in development runs and is installed separately by end users.
    compileOnly 'com.cinemamod:mcef:2.1.6-1.21.1'

}

tasks.named('jar', Jar).configure {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from({ configurations.ffmpegEmbed.collect { zipTree(it) } }) {
        exclude 'META-INF/MANIFEST.MF'
        exclude 'META-INF/*.SF'
        exclude 'META-INF/*.RSA'
        exclude 'META-INF/*.DSA'
        exclude 'module-info.class'
    }
}

neoForge.runs.named('client') {
    additionalRuntimeClasspathConfiguration.dependencies.add(
            project.dependencies.create('com.cinemamod:mcef-neoforge:2.1.6-1.21.1'))
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}
sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven { url = "file://${project.projectDir}/repo" }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs.add('-Xlint:deprecation')
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
    gradleVersion = '8.9'
}

tasks.register('tightDecoderTest', JavaExec) {
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'dev.minescreen.client.vnc.TightDecoderTestHarness'
}

tasks.register('rfbExternalProbe', JavaExec) {
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'dev.minescreen.client.vnc.RfbExternalProbe'
}

tasks.register('videoDecoderProbe', JavaExec) {
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath + configurations.clientLegacyClasspath + files(
            layout.buildDirectory.file("moddev/artifacts/neoforge-${neo_version}-minecraft-merged.jar"))
    mainClass = 'dev.minescreen.client.video.FfmpegVideoProbe'
    if (providers.gradleProperty('videoProbeSource').isPresent()) {
        args providers.gradleProperty('videoProbeSource').get()
        if (providers.gradleProperty('videoProbeWidth').isPresent()
                && providers.gradleProperty('videoProbeHeight').isPresent()) {
            args providers.gradleProperty('videoProbeWidth').get()
            args providers.gradleProperty('videoProbeHeight').get()
        }
    }
}

tasks.register('packagedFfmpegProbe', JavaExec) {
    dependsOn tasks.named('jar'), testClasses
    // Deliberately exclude Gradle's FFmpeg/runtime configurations. The wrapper classes and native
    // DLLs must be discovered from the final MineScreen jar itself, matching an installed client.
    classpath = files(sourceSets.test.output, tasks.named('jar').flatMap { it.archiveFile })
    mainClass = 'dev.minescreen.client.video.PackagedFfmpegProbe'
}

tasks.register('profileSourceTest', JavaExec) {
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'dev.minescreen.client.content.ClientScreenProfileSourceTestHarness'
}

tasks.named('check').configure {
    dependsOn tasks.named('tightDecoderTest')
    dependsOn tasks.named('profileSourceTest')
    dependsOn tasks.named('packagedFfmpegProbe')
}
